[package]
name = "netx_msgclient_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib","cdylib","rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1.0.61"
async-trait="0.1"
log="0.4"
env_logger = "0.8.2"
interoptopus="0.14"
interoptopus_backend_csharp = "0.14"
interoptopus_backend_cpython="0.14"
interoptopus_backend_c="0.14"
netxclient = "1.6"
serde = { version = "1.0", features = ["derive"] }